raw/NAILUL MURODZ MUHAMMAD 6400 245150201111033/2024-11-14-08-21-52.ceg/compilation.txt
NT.java:68: error: non-static variable this cannot be referenced from a static context
        Calculator calc = new Calculator();
                          ^
1 error
Not compiled
